--- a/career.html
+++ b/career.html
@@ -22,11 +22,11 @@
     <section id="career">
         <h2>Career and Accomplishments</h2>
         <p>Peter Griffin's career has seen a wide range of jobs, from working as a safety officer at a Happy-go-Lucky toy factory to being a successful television personality. His most notable role is as the patriarch of the Griffin family on *Family Guy*, where he continually breaks the fourth wall and offers comedic commentary.</p>
-        <img src="images/peter-job.jpg" alt="Peter Griffin at work">
+        <img src="images/peter-job.png" alt="Peter Griffin at work">
     </section>
 
     <footer>
-        <p>&copy; 2024 Peter Griffin Fan Page</p>
+        <p>&copy; 2024 Peter Griffin Page</p>
     </footer>
 </body>
 </html>
