--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <section id="introduction">
         <h2>Introduction</h2>
         <p>Peter Griffin is the main character from the animated TV series *Family Guy*. He is known for his humorous antics, his family-oriented personality, and his misadventures. A quirky and often over-the-top figure, Peter is a staple in American pop culture, voiced by Seth MacFarlane.</p>
-        <img src="images/peter-griffin.jpg" alt="Peter Griffin">
+        <img src="images/peter-griffin.png" alt="Peter Griffin anime lookin ahh">
     </section>
 
     <footer>
-        <p>&copy; 2024 Peter Griffin Fan Page</p>
+        <p>&copy; 2024 Peter Griffin Page</p>
     </footer>
 </body>
 </html>
