--- a/early-life.html
+++ b/early-life.html
@@ -26,7 +26,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Peter Griffin Fan Page</p>
+        <p>&copy; 2024 Peter Griffin Page</p>
     </footer>
 </body>
 </html>
