--- a/career.html
+++ b/career.html
@@ -21,7 +21,7 @@
 
     <section id="career">
         <h2>Career and Accomplishments</h2>
-        <p>Peter Griffin's career has seen a wide range of jobs, from working as a safety officer at a Happy-go-Lucky toy factory to being a successful television personality. His most notable role is as the patriarch of the Griffin family on *Family Guy*, where he continually breaks the fourth wall and offers comedic commentary.</p>
+        <p>Peter Griffin has held a variety of jobs over the course of Family Guy’s run. His most notable and consistent job is as a worker at the Happy-go-Lucky toy factory, where he holds the position of a safety officer. However, his career is often marked by his incompetence, laziness, and frequent job changes, which are typically a source of humor on the show. Peter's lack of ambition and tendency to get distracted or accidentally cause problems at work frequently lead to him losing jobs or starting new, often ridiculous ventures. Over the years, he has taken on numerous odd jobs, from being a fisherman to running his own cable access show, but his most consistent trait is his inability to succeed in any of them for long.</p>
         <img src="images/peter-job.png" alt="Peter Griffin at work">
     </section>
 
