--- a/early-life.html
+++ b/early-life.html
@@ -21,7 +21,7 @@
 
     <section id="early-life">
         <h2>Early Life</h2>
-        <p>Peter Griffin was born in Quahog, Rhode Island, to Thelma and Francis Griffin. Growing up in a chaotic household, Peter developed a strong sense of humor and resilience. He was known for getting into trouble from a young age, often with his best friend, Quagmire.</p>
+        <p>Peter Griffin was born in 1958 in the fictional town of Quahog, Rhode Island, to Francis and Thelma Griffin. He grew up in a rather dysfunctional household, with his father being an alcoholic and his mother being a strict, emotionally distant figure. His early years were marked by a series of unfortunate events and a lack of proper guidance, which contributed to Peter’s immature and irresponsible nature. These experiences, along with his often naive perspective on life, shaped the eccentric man he would become. Much of his childhood remains a running joke in the show, with flashbacks that emphasize his clumsy, awkward, and sometimes clueless personality.<p>
         <img src="images/peter-childhood.jpg" alt="Peter Griffin as a child">
     </section>
 
