--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section id="introduction">
         <h2>Introduction</h2>
-        <p>Peter Griffin is the main character from the animated TV series *Family Guy*. He is known for his humorous antics, his family-oriented personality, and his misadventures. A quirky and often over-the-top figure, Peter is a staple in American pop culture, voiced by Seth MacFarlane.</p>
+        <p>Peter Griffin is the main protagonist of the animated TV show Family Guy, created by Seth MacFarlane. He is an overweight, loud, and often oblivious man, known for his humorous and outrageous behavior. As the patriarch of the Griffin family, Peter’s actions often lead to absurd and comical situations, while his lack of common sense contrasts with his deep love for his family. Despite his many flaws, Peter’s character remains a beloved part of the Family Guy universe, known for his wild antics, childlike enthusiasm, and tendency to cause chaos.<p>
         <img src="images/peter-griffin.png" alt="Peter Griffin anime lookin ahh">
     </section>
 
