--- a/personal-life.html
+++ b/personal-life.html
@@ -21,7 +21,7 @@
 
     <section id="personal-life">
         <h2>Personal Life</h2>
-        <p>Peter Griffin is married to Lois Griffin, with whom he shares three children: Meg, Chris, and Stewie. His relationships are often comedic but show his deep love and commitment to his family. Outside of his home life, Peter enjoys drinking at The Drunken Clam with his friends, Quagmire, Cleveland, and Joe.</p>
+        <p>Peter is married to Lois Griffin, with whom he has three children: Meg, Chris, and Stewie. Despite his childish and often reckless behavior, Peter loves his family deeply. His relationship with Lois is a central element of the show, characterized by both comedic misunderstandings and genuine affection. He often finds himself at odds with his children, especially Meg, whom he often humiliates, and Stewie, his extremely intelligent and scheming son. Peter is also close friends with his eccentric neighbors, including Cleveland Brown, Quagmire, and Joe Swanson, who frequently get caught up in his ridiculous escapades. Though Peter is prone to making poor decisions and causing trouble, his loyalty to his family and friends is unwavering. His personal life often serves as the backdrop for many of the shows absurd plotlines and hilarious moments.</p>
         <img src="images/peter-lois.jpg" alt="Peter Griffin with Lois Griffin">
     </section>
 
